Duplicate Mouse Pointer on Rotated Secondary Screen
I have a duplicate mouse pointer appearing on my vertically rotated screen that moves along when moving within a specific region. The fake pointer's icon always matches the real one's but it's rotated 90° left on the wrong screen.
The pointer always wrongfully appears on the vertical screen 3 when the pointer is located in the region from (0%X,0%y) to (45%x,100%y) on the landscape screen 2.
- With the pointer on screen 2 at (0%x,0%y) resulting in a wrong duplicate render at (100%x,0%y), and
- with the pointer on screen 2 at (0%x, 100%y) producing a duplicated at (100%x, 45%y) (0,0) being the top-left origin of each screen.
The duplicate does not happen when the pointer is outside of this region on screen 2, also not when the pointer is on screen 1.
My screen setup from left to right:
- Screen 3 Vertical "rotated left"
- Screen 2 Landscape, a few centimeters above bottom-even relative to screen 3
- Screen 1 - usually turned off (Laptop in Docking station) but that does not affect the issue.
Screen 2 and 3 are same models, FullHD screens. Gnome 3.28 on Wayland session, current Ubuntu-Gnome 18.04 packages.
- Green pointer: real mouse pointer location,
- Red pointer: erroneous duplicate appearing rotated and on the wrong screen